Fix swagger para deploy
